--- a/assets/css/package.css
+++ b/assets/css/package.css
@@ -14,7 +14,7 @@ body {
   /* Header Styles */
   .package {
       height: 50vh;
-      background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url(image/career.jpg);
+      background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url(../image/career.jpg);
       background-position: 50% 40%;
       background-repeat: no-repeat;
       background-size: 100%; /* Zoom out the image */
