--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -38,7 +38,7 @@ body {
   /* Header Styles */
   .experts {
     height: 50vh;
-      background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url(image/blog.jpg);
+      background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url(../image/blog.jpg);
       background-position: 50% 100%;
       background-repeat: no-repeat;
       background-size: 100%; /* Zoom out the image */
