--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -85,7 +85,7 @@ body {
   /* Header Styles */
   .experts {
     height: 50vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url('image/team1.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url(../image/team.jpg);
     background-position: center; /* Center the image */
     background-repeat: no-repeat;
     background-size: 100%; /* Zoom out the image */
