--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1558,6 +1558,13 @@ footer {
 .social-button:hover span {
   opacity: 1;
 }
+/* Hide social buttons on mobile screens (max-width: 768px) */
+@media screen and (max-width: 768px) {
+  .social-button {
+    display: none;
+  }
+}
+
 
 /* testimonial */
 
