--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1574,7 +1574,7 @@ footer {
 }
 
 .testimonials-section .section-header {
-  max-width: 700px;
+  max-width: auto;
   text-align: center;
   margin: 30px auto 40px;
   padding-bottom: 10px;
